try to move dockerfile to root